reports/validation/pytest_output.txt
============================= test session starts =============================
platform win32 -- Python 3.12.10, pytest-9.0.0, pluggy-1.6.0 -- C:\Tools\pipx\home\venvs\pytest\Scripts\python.exe
cachedir: .pytest_cache
rootdir: C:\Users\richg\ALL_AI\Complete AI Development Pipeline ΓÇô Canonical Phase Plan
configfile: pytest.ini (WARNING: ignoring pytest config in pyproject.toml!)
collecting ... collected 427 items / 5 errors / 1 skipped

=================================== ERRORS ====================================
_____________ ERROR collecting tests/ast_analysis/test_parser.py ______________
ImportError while importing test module 'C:\Users\richg\ALL_AI\Complete AI Development Pipeline ΓÇô Canonical Phase Plan\tests\ast_analysis\test_parser.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
..\..\AppData\Local\Programs\Python\Python312\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests\ast_analysis\test_parser.py:12: in <module>
    from core.ast.parser import ASTParser, create_parser
core\ast\parser.py:12: in <module>
    import tree_sitter_javascript as tsjavascript
E   ModuleNotFoundError: No module named 'tree_sitter_javascript'
_____________ ERROR collecting tests/ast_analysis/test_python.py ______________
ImportError while importing test module 'C:\Users\richg\ALL_AI\Complete AI Development Pipeline ΓÇô Canonical Phase Plan\tests\ast_analysis\test_python.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
..\..\AppData\Local\Programs\Python\Python312\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests\ast_analysis\test_python.py:9: in <module>
    from core.ast.languages.python import PythonExtractor
core\ast\languages\__init__.py:9: in <module>
    from .python import PythonExtractor
core\ast\languages\python.py:11: in <module>
    from tree_sitter import Node, Tree
E   ModuleNotFoundError: No module named 'tree_sitter'
_____________ ERROR collecting tests/autonomous/test_reflexion.py _____________
C:\Tools\pipx\home\venvs\pytest\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
C:\Tools\pipx\home\venvs\pytest\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
..\..\AppData\Local\Programs\Python\Python312\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
C:\Tools\pipx\home\venvs\pytest\Lib\site-packages\_pytest\assertion\rewrite.py:197: in exec_module
    exec(co, module.__dict__)
tests\autonomous\test_reflexion.py:3: in <module>
    from core.autonomous import ErrorAnalyzer, FixGenerator, ReflexionLoop
core\autonomous\__init__.py:4: in <module>
    from .fix_generator import FixGenerator
E     File "C:\Users\richg\ALL_AI\Complete AI Development Pipeline ΓÇô Canonical Phase Plan\core\autonomous\fix_generator.py", line 22
E       def _default_fix(errors: List[ParsedError], attempt: int) -> Dict[str, str]:
E   IndentationError: unexpected unindent
_____________ ERROR collecting tests/core/state/test_dag_utils.py _____________
ImportError while importing test module 'C:\Users\richg\ALL_AI\Complete AI Development Pipeline ΓÇô Canonical Phase Plan\tests\core\state\test_dag_utils.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
..\..\AppData\Local\Programs\Python\Python312\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests\core\state\test_dag_utils.py:8: in <module>
    from modules.core_state import m010003_dag_utils as dag_utils
E   ModuleNotFoundError: No module named 'modules'
____ ERROR collecting tests/gui/tui_panel_framework/test_layout_manager.py ____
ImportError while importing test module 'C:\Users\richg\ALL_AI\Complete AI Development Pipeline ΓÇô Canonical Phase Plan\tests\gui\tui_panel_framework\test_layout_manager.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
..\..\AppData\Local\Programs\Python\Python312\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests\gui\tui_panel_framework\test_layout_manager.py:4: in <module>
    from gui.tui_app.core.layout_manager import BasicLayoutManager
E   ModuleNotFoundError: No module named 'gui.tui_app'
============================== warnings summary ===============================
core\engine\test_gate.py:65
  C:\Users\richg\ALL_AI\Complete AI Development Pipeline ΓÇô Canonical Phase Plan\core\engine\test_gate.py:65: PytestCollectionWarning: cannot collect test class 'TestGate' because it has a __init__ constructor (from: tests/engine/test_executor.py)
    class TestGate:

core\engine\test_gate.py:43
  C:\Users\richg\ALL_AI\Complete AI Development Pipeline ΓÇô Canonical Phase Plan\core\engine\test_gate.py:43: PytestCollectionWarning: cannot collect test class 'TestResults' because it has a __init__ constructor (from: tests/engine/test_executor.py)
    @dataclass

core\engine\test_gate.py:65
  C:\Users\richg\ALL_AI\Complete AI Development Pipeline ΓÇô Canonical Phase Plan\core\engine\test_gate.py:65: PytestCollectionWarning: cannot collect test class 'TestGate' because it has a __init__ constructor (from: tests/engine/test_test_gate.py)
    class TestGate:

core\engine\test_gate.py:43
  C:\Users\richg\ALL_AI\Complete AI Development Pipeline ΓÇô Canonical Phase Plan\core\engine\test_gate.py:43: PytestCollectionWarning: cannot collect test class 'TestResults' because it has a __init__ constructor (from: tests/engine/test_test_gate.py)
    @dataclass

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
- generated xml file: C:\Users\richg\ALL_AI\Complete AI Development Pipeline ΓÇô Canonical Phase Plan\reports\validation\pytest_results.xml -
=========================== short test summary info ===========================
ERROR tests/ast_analysis/test_parser.py
ERROR tests/ast_analysis/test_python.py
ERROR tests/autonomous/test_reflexion.py
ERROR tests/core/state/test_dag_utils.py
ERROR tests/gui/tui_panel_framework/test_layout_manager.py
!!!!!!!!!!!!!!!!!!!!!!!!!! stopping after 5 failures !!!!!!!!!!!!!!!!!!!!!!!!!!
================== 1 skipped, 4 warnings, 5 errors in 2.48s ===================
